--- a/views/admin/adminOrder.ejs
+++ b/views/admin/adminOrder.ejs
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: linear-gradient(135deg, #1a1a1a, #2b2b2b);
             color: white;
         }
         .container {
@@ -48,8 +47,10 @@
     </style>
 </head>
 <body>
+    <%- include('../navbar') %>
+
     <div class="container">
-        <h1 class="text-center mt-4">📦 Заказы</h1>
+        <h1 class="text-center mt-4">Заказы</h1>
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
